Moved from separate lists to objects (WIP) and added a not found page

--- a/templates/specs.html
+++ b/templates/specs.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<script>
+    document.title = "{{vmName}}";
+    if ("{{exists}}" == "False")
+    {
+        window.location.href = "/notFound.html?vmPath=" + "{{vmPath1}}";
+    }
+</script>
 <body>
     
     <ul id="specsUL">
@@ -18,7 +25,7 @@
     <button id="editVM">Edit</button>
 </body>
 <script>
-    document.title = "{{vmName}}";
+    
     const specsUL = document.getElementById("specsUL");
     let li = document.createElement("li");
     if("{{vncPort}}"!="None")
