--- a/src/templates/specs.html
+++ b/src/templates/specs.html
@@ -44,7 +44,7 @@
         }
         else
         {
-            document.getElementById("firmwareLabel").textContent = ("Firmware type: " + 'AAA');
+            document.getElementById("firmwareLabel").textContent = ("Firmware type: " + 'BIOS');
         }
         document.getElementById("hostPath").textContent = ("Host path: " + obj['vmPath']);
         document.getElementById("isON").textContent = ("Is ON: " + obj['isON']);
