fixed removing network cards

--- a/src/templates/specs.html
+++ b/src/templates/specs.html
@@ -23,6 +23,7 @@
     </ul>
     <button id="runVM">run</button>
     <button id="editVM">Edit</button>
+    <button id="cloneVM">Clone</button>
 </body>
 <script>
     
