bit of work in cloning

--- a/src/templates/specs.html
+++ b/src/templates/specs.html
@@ -99,6 +99,7 @@
         let vmName = prompt("Insert new VM name: ");
         console.log(vmName)
         cloneVM(vmName)
+        //TODO: clone waiting thing
     }
     function runVM()
     {
